--- a/p2/p2.tex
+++ b/p2/p2.tex
@@ -274,7 +274,7 @@ $q_m$ принимает значение, наиболее близкое к з
 Или же при использовании функции качества идентификации $F(q_o, q_m )$ задача
 эквивалентна классической задаче поиска экстремума:
 \[
-  F( q_o, q_m(p) ) \to \max.
+  \overline{F}( q_o, q_m(p) ) \to \max.
 \]
 На самом деле, существуют определённые аспекты, которые делают такое
 сведение практически невозможным.
