--- a/p5/colp_testsys.tex
+++ b/p5/colp_testsys.tex
@@ -239,7 +239,7 @@ $b \in [ 0.02; 4.2 ]$
 % }}}2
 
 
-\subsection{Влияние параметров системы идентификации на ошибку идентификации для системы Дуффинга}  % {{{2
+\subsection{Влияние параметров системы идентификации на ошибку идентификации для системы Колпитца}  % {{{2
 
 
 
