--- a/p5/fric_testsys.tex
+++ b/p5/fric_testsys.tex
@@ -152,7 +152,7 @@ $ f_{df}( x, \dot{x}, \ldots)  $ -- сила сухого трения.
   \includegraphics[width=0.49\textwidth]{p/cha/fric/fric_m5p-pl_n_sign.png}
   \includegraphics[width=0.49\textwidth]{p/cha/fric/fric_m5p-pl_n_sin.png}
 }
-\caption{Процесс идентификации параметра $c_{x_y} $ системы (\ref{atu:eq:dryfric_sys})
+\caption{Процесс идентификации параметра $f_{dm} $ системы (\ref{atu:eq:dryfric_sys})
   при различных видах нестационарности этого параметра
 }
 \label{atu:f:fric_id}
