Added model for relax3

--- a/pres/pres_atu.tex
+++ b/pres/pres_atu.tex
@@ -2079,6 +2079,27 @@ $v_f = 1/\nu$ -- коэффициент пропорциональности.
   \frametitle{Система связанных релаксационных генераторов}
   \framesubtitle{Модель}
 
+  \begin{equation}
+    \begin{cases}
+      V_b = V_{cc} - R_b ( I_1 + I_2 + I_3 ) \\
+      C_1 \dot{V}_1 = \frac{V_b-V_1}{R_{v1}} - \frac{V_1}{R_1} \mathrm{On}_1() - \frac{V_1}{R_1+R_{1,\mathrm{leak}}} \\
+      C_2 \dot{V}_2 = \frac{V_b-V_2}{R_{v2}} - \frac{V_2}{R_2} \mathrm{On}_2() - \frac{V_2}{R_2+R_{2,\mathrm{leak}}} \\
+      C_3 \dot{V}_3 = \frac{V_b-V_3}{R_{v3}} - \frac{V_3}{R_3} \mathrm{On}_3() - \frac{V_3}{R_3+R_{3,\mathrm{leak}}} \\
+      I_i = \frac{V_b-V_i}{R_{vi}}
+    \end{cases}.
+    \label{atu:eq:relax3}
+  \end{equation}
+
+  Параметры:
+  $R_b$ --- сопротивление цепи питания,
+  $R_{vi}$ --- сопротивления зарядки релаксационных генераторов,
+  $R_{i}$ --- сопротивления зарядки релаксационных генераторов,
+  $R_{i,\mathrm{leak}}$ --- сопротивления утечки.
+
+  Функции $ \mathrm{On}_i() $ определяют моменты переключения генраторов,
+  задаются алгоритмически (гистерезис). Определяются параметрами
+  $V_{on}$, $V_{off}$.
+
 
 \end{frame}
 
