Spell in presentation

--- a/pres/pres_atu.tex
+++ b/pres/pres_atu.tex
@@ -481,7 +481,7 @@ J.C.~Sprott,
 
   Определение: \textbf{поисковый агент} -- это динамическая система, получающая выходной ($x(t)$),
   и, при необходимости входной сигнал ($u(t)$) от одной или нескольких моделей,
-  величину оцкнци состояния объекта по критерию идентификации $q_o(t)$,
+  величину оценки состояния объекта по критерию идентификации $q_o(t)$,
   может быть обмениваясь информацией с другими элементами поисковой системы,
   на основании значения критерия идентификации
   реализующая алгоритм настройки параметра модели (моделей)
@@ -1404,7 +1404,7 @@ $v_f = 1/\nu$ -- коэффициент пропорциональности.
 
 \begin{frame}
   \frametitle{Система Лоренца}
-  \framesubtitle{Зависимости критерив от двух параметров}
+  \framesubtitle{Зависимости критериев от двух параметров}
 
 
   \begin{figure}[h!]
@@ -1578,7 +1578,7 @@ $v_f = 1/\nu$ -- коэффициент пропорциональности.
       \includegraphics[width=\DDW]{p/spr_a/sprott_a_FAlv5x3r-p_a_q_e_sin.png}
       \hfill{~}
     }
-    \caption{Зависимости $\overline{e}_{r*}(a_q)$ при идентификации системы Sprott A методоми  qAuv5.3r.$q_{x^2}$ и  FAlv5.3r.$q_{x^2}$ }
+    \caption{Зависимости $\overline{e}_{r*}(a_q)$ при идентификации системы Sprott A методами  qAuv5.3r.$q_{x^2}$ и  FAlv5.3r.$q_{x^2}$ }
     \label{atu:f:spr_a_a_q_qF.q_x2}
   \end{figure}
 
@@ -1607,7 +1607,7 @@ $v_f = 1/\nu$ -- коэффициент пропорциональности.
       \includegraphics[width=\DDW]{p/spr_a/sprott_a_FAlv5x3r-p_qg_e_sin.png}
       \hfill{~}
     }
-    \caption{Зависимости $\overline{e}_{r*}(q_\gamma)$ при идентификации системы Sprott A методоми  qAuv5.3r.$q_{x^2}$ и  FAlv5.3r.$q_{x^2}$ }
+    \caption{Зависимости $\overline{e}_{r*}(q_\gamma)$ при идентификации системы Sprott A методами  qAuv5.3r.$q_{x^2}$ и  FAlv5.3r.$q_{x^2}$ }
     \label{atu:f:spr_a_qg_qF.q_x2}
   \end{figure}
 
@@ -1615,16 +1615,16 @@ $v_f = 1/\nu$ -- коэффициент пропорциональности.
 
 \end{frame}
 
-% --- chua ---
-\begin{frame}
-  \frametitle{Система Чуа}
-  \framesubtitle{Определение}
-
-
-\end{frame}
-
-
-
+%% --- chua ---
+% \begin{frame}
+%   \frametitle{Система Чуа}
+%   \framesubtitle{Определение}
+%
+%
+% \end{frame}
+%
+%
+%
 % % -----------------------------------------------------------------------
 %
 % \begin{frame}
@@ -1959,7 +1959,7 @@ $v_f = 1/\nu$ -- коэффициент пропорциональности.
 
 \begin{frame}
   \frametitle{Система Колпитца}
-  \framesubtitle{Модель (\ref{atu:eq:bjt_libear_model}) в сранении с реальным объектом}
+  \framesubtitle{Модель (\ref{atu:eq:bjt_libear_model}) в сравнении с реальным объектом}
 
   \begin{figure}[htb!]
    \centerline{
@@ -1995,7 +1995,7 @@ $v_f = 1/\nu$ -- коэффициент пропорциональности.
 
   \begin{figure}[htb!]
     \centerline{\includegraphics[width=60\TW]{p/colp/colp_bjt_q-p_Rc_q.png} }
-    \caption{Критери для системы Колпитца}
+    \caption{Критерии для системы Колпитца}
     \label{atu:f:colp_q}
   \end{figure}
 
@@ -2096,7 +2096,7 @@ $v_f = 1/\nu$ -- коэффициент пропорциональности.
   $R_{i}$ --- сопротивления зарядки релаксационных генераторов,
   $R_{i,\mathrm{leak}}$ --- сопротивления утечки.
 
-  Функции $ \mathrm{On}_i() $ определяют моменты переключения генраторов,
+  Функции $ \mathrm{On}_i() $ определяют моменты переключения генераторов,
   задаются алгоритмически (гистерезис). Определяются параметрами
   $V_{on}$, $V_{off}$.
 
@@ -2127,7 +2127,7 @@ $v_f = 1/\nu$ -- коэффициент пропорциональности.
  &
   \begin{figure}[htb!]
     \centerline{\includegraphics[width=0.50\textwidth]{p/relax3/relax3_read_q-p_q1.png} }
-    \caption{Критери для системы ``relax3''}
+    \caption{Критерии для системы ``relax3''}
     \label{atu:f:relax3_q}
   \end{figure}
   \end{tabular}
@@ -2248,7 +2248,7 @@ $v_f = 1/\nu$ -- коэффициент пропорциональности.
       корректировать глобальные параметры поиска.
 
     \item
-      Модель \textbf{генератора Копитца}, учитывающей большее количество нелинейных эффектов,
+      Модель \textbf{генератора Колпитца}, учитывающей большее количество нелинейных эффектов,
       что обеспечивает более адекватные результаты процесса идентификации ее
       параметров новыми методами.
 
@@ -2294,15 +2294,15 @@ $v_f = 1/\nu$ -- коэффициент пропорциональности.
   \frametitle{Печатные работы и апробация}
   %\framesubtitle{}
 
-По теме дисертации опубликовано
+По теме диссертации опубликовано
 49 печатных работ,
 из них
 24 входят в международные наукометрические базы,
 13 статей опубликовано в материалах конференций.
 
 {\scriptsize
-Основные положения дисертационной работи докладывались на
-научно-практических коференциях:
+Основные положения диссертационной работы докладывались на
+научно-практических конференциях:
 ``Інформатика та системні науки'' (ІСН-2011) Полтава--2011,
 ``Интеллектуальные системы принятия решений и проблемы вычислительного интеллекта'' (ISDMCI) Херсон--2011,
 ``Информационные технологии в управлении сложными системами'' Днепропетровск--2011,
@@ -2339,7 +2339,7 @@ $v_f = 1/\nu$ -- коэффициент пропорциональности.
     \item
       Создан новый класс систем идентификации в рамках адаптивно-поисковом парадигмы,
       которые за счет использования коллективной динамики ансамбля поисковых
-      агентов обеспечивают лучшее качество идентифицации.
+      агентов обеспечивают лучшее качество идентификации.
 
     \item
       Создано программное обеспечение, пригодное для моделирования как систем
