Renew name, more picture in p7

--- a/defs.tex
+++ b/defs.tex
@@ -1,7 +1,7 @@
 
-\newcommand{\booknameUa}{Моделі та  методи адаптивно-пошукової ідентифікації систем з хаотичною   динамікою}
-\newcommand{\booknameRu}{Модели  и  методы адаптивно-поисковой идентификации систем с хаотической динамикой}
-\newcommand{\booknameEn}{Models and methods for adaptive-search identification systems with chaotic dynamics}
+\newcommand{\booknameUa}{Ансамблеві пошукові моделі і методи параметричної ідентифікації систем з хаотичною поведінкою}
+\newcommand{\booknameRu}{Ансамблевые поисковые модели и методы параметрической идентификации систем с хаотическим поведением}
+\newcommand{\booknameEn}{Ensemble search models and methods for parametric identification of systems with chaotic behavior}
 \newcommand{\bookname}{\booknameRu}
 
 \newcommand{\bookyear}{2017}
